--- a/Equity_Res_CA.ipynb
+++ b/Equity_Res_CA.ipynb
@@ -771,10 +771,442 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "a8281dfc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Processing 12 stocks ---\n",
+      "1. Fetching Analyst Ratings from Finviz...\n",
+      "   Skipping Finviz for MATR.TO: HTTP error for URL https://finviz.com/quote.ashx?t=MATR.TO: 404 Client Error: Not Found for url: https://finviz.com/quote.ashx?t=MATR.TO\n",
+      "2. Fetching Price & Volatility from yfinance...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jdcc3\\AppData\\Local\\Temp\\ipykernel_11552\\4193982900.py:46: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "  data = yf.download(ticker_list, period=\"1y\", interval=\"1d\", group_by='ticker', progress=False, threads=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Final Watchlist ---\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Ticker",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Price",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Change_%",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "52W_MA",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Drop_from_High_%",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Recom",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "Target_Price",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
+         "name": "Rel_Volume",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "Volatility_%",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "002b497f-cbc0-4d53-914d-80b3d285a525",
+       "rows": [
+        [
+         "6",
+         "GRND",
+         "13.41",
+         "-0.59",
+         "17.66",
+         "-46.64",
+         "1.40",
+         "21.75",
+         "0.52",
+         "3.18"
+        ],
+        [
+         "7",
+         "MATR.TO",
+         "8.07",
+         "0.62",
+         "10.67",
+         "-37.88",
+         null,
+         null,
+         "0.85",
+         "3.09"
+        ],
+        [
+         "0",
+         "ADMA",
+         "19.11",
+         "-0.88",
+         "17.9",
+         "-25.56",
+         "1.00",
+         "30.00",
+         "0.39",
+         "3.26"
+        ],
+        [
+         "10",
+         "SEI",
+         "44.58",
+         "-0.16",
+         "32.53",
+         "-21.85",
+         "1.17",
+         "65.45",
+         "0.38",
+         "5.9"
+        ],
+        [
+         "8",
+         "MIR",
+         "23.77",
+         "0.08",
+         "19.92",
+         "-21.49",
+         "1.12",
+         "30.62",
+         "0.45",
+         "3.49"
+        ],
+        [
+         "11",
+         "UBER",
+         "81.5",
+         "0.3",
+         "84.53",
+         "-20.09",
+         "1.47",
+         "112.40",
+         "0.56",
+         "2.41"
+        ],
+        [
+         "5",
+         "FLEX",
+         "62.56",
+         "-1.22",
+         "48.3",
+         "-13.38",
+         "1.50",
+         "76.00",
+         "0.3",
+         "2.9"
+        ],
+        [
+         "2",
+         "ARCC",
+         "20.17",
+         "-0.15",
+         "20.48",
+         "-9.91",
+         "1.27",
+         "22.64",
+         "1.47",
+         "1.38"
+        ],
+        [
+         "9",
+         "ONB",
+         "22.79",
+         "-0.83",
+         "21.4",
+         "-4.55",
+         "1.85",
+         "25.92",
+         "1.09",
+         "2.14"
+        ],
+        [
+         "1",
+         "APG",
+         "39.2",
+         "-0.94",
+         "31.4",
+         "-3.4",
+         "1.45",
+         "43.40",
+         "0.34",
+         "1.92"
+        ],
+        [
+         "4",
+         "DD",
+         "40.89",
+         "-0.9",
+         "31.9",
+         "-2.29",
+         "1.48",
+         "47.19",
+         "0.59",
+         "2.23"
+        ],
+        [
+         "3",
+         "BANC",
+         "19.63",
+         "-0.36",
+         "15.37",
+         "-2.19",
+         "1.27",
+         "22.14",
+         "0.53",
+         "2.18"
+        ]
+       ],
+       "shape": {
+        "columns": 9,
+        "rows": 12
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ticker</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Change_%</th>\n",
+       "      <th>52W_MA</th>\n",
+       "      <th>Drop_from_High_%</th>\n",
+       "      <th>Recom</th>\n",
+       "      <th>Target_Price</th>\n",
+       "      <th>Rel_Volume</th>\n",
+       "      <th>Volatility_%</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>GRND</td>\n",
+       "      <td>13.41</td>\n",
+       "      <td>-0.59</td>\n",
+       "      <td>17.66</td>\n",
+       "      <td>-46.64</td>\n",
+       "      <td>1.40</td>\n",
+       "      <td>21.75</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>3.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>MATR.TO</td>\n",
+       "      <td>8.07</td>\n",
+       "      <td>0.62</td>\n",
+       "      <td>10.67</td>\n",
+       "      <td>-37.88</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>3.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ADMA</td>\n",
+       "      <td>19.11</td>\n",
+       "      <td>-0.88</td>\n",
+       "      <td>17.90</td>\n",
+       "      <td>-25.56</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>30.00</td>\n",
+       "      <td>0.39</td>\n",
+       "      <td>3.26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>SEI</td>\n",
+       "      <td>44.58</td>\n",
+       "      <td>-0.16</td>\n",
+       "      <td>32.53</td>\n",
+       "      <td>-21.85</td>\n",
+       "      <td>1.17</td>\n",
+       "      <td>65.45</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>5.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>MIR</td>\n",
+       "      <td>23.77</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>19.92</td>\n",
+       "      <td>-21.49</td>\n",
+       "      <td>1.12</td>\n",
+       "      <td>30.62</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>3.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>UBER</td>\n",
+       "      <td>81.50</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>84.53</td>\n",
+       "      <td>-20.09</td>\n",
+       "      <td>1.47</td>\n",
+       "      <td>112.40</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>2.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>FLEX</td>\n",
+       "      <td>62.56</td>\n",
+       "      <td>-1.22</td>\n",
+       "      <td>48.30</td>\n",
+       "      <td>-13.38</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>76.00</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>2.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ARCC</td>\n",
+       "      <td>20.17</td>\n",
+       "      <td>-0.15</td>\n",
+       "      <td>20.48</td>\n",
+       "      <td>-9.91</td>\n",
+       "      <td>1.27</td>\n",
+       "      <td>22.64</td>\n",
+       "      <td>1.47</td>\n",
+       "      <td>1.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>ONB</td>\n",
+       "      <td>22.79</td>\n",
+       "      <td>-0.83</td>\n",
+       "      <td>21.40</td>\n",
+       "      <td>-4.55</td>\n",
+       "      <td>1.85</td>\n",
+       "      <td>25.92</td>\n",
+       "      <td>1.09</td>\n",
+       "      <td>2.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>APG</td>\n",
+       "      <td>39.20</td>\n",
+       "      <td>-0.94</td>\n",
+       "      <td>31.40</td>\n",
+       "      <td>-3.40</td>\n",
+       "      <td>1.45</td>\n",
+       "      <td>43.40</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>1.92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>DD</td>\n",
+       "      <td>40.89</td>\n",
+       "      <td>-0.90</td>\n",
+       "      <td>31.90</td>\n",
+       "      <td>-2.29</td>\n",
+       "      <td>1.48</td>\n",
+       "      <td>47.19</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>2.23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BANC</td>\n",
+       "      <td>19.63</td>\n",
+       "      <td>-0.36</td>\n",
+       "      <td>15.37</td>\n",
+       "      <td>-2.19</td>\n",
+       "      <td>1.27</td>\n",
+       "      <td>22.14</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>2.18</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Ticker  Price  Change_%  52W_MA  Drop_from_High_% Recom Target_Price  Rel_Volume  Volatility_%\n",
+       "6      GRND  13.41     -0.59   17.66            -46.64  1.40        21.75        0.52          3.18\n",
+       "7   MATR.TO   8.07      0.62   10.67            -37.88   NaN          NaN        0.85          3.09\n",
+       "0      ADMA  19.11     -0.88   17.90            -25.56  1.00        30.00        0.39          3.26\n",
+       "10      SEI  44.58     -0.16   32.53            -21.85  1.17        65.45        0.38          5.90\n",
+       "8       MIR  23.77      0.08   19.92            -21.49  1.12        30.62        0.45          3.49\n",
+       "11     UBER  81.50      0.30   84.53            -20.09  1.47       112.40        0.56          2.41\n",
+       "5      FLEX  62.56     -1.22   48.30            -13.38  1.50        76.00        0.30          2.90\n",
+       "2      ARCC  20.17     -0.15   20.48             -9.91  1.27        22.64        1.47          1.38\n",
+       "9       ONB  22.79     -0.83   21.40             -4.55  1.85        25.92        1.09          2.14\n",
+       "1       APG  39.20     -0.94   31.40             -3.40  1.45        43.40        0.34          1.92\n",
+       "4        DD  40.89     -0.90   31.90             -2.29  1.48        47.19        0.59          2.23\n",
+       "3      BANC  19.63     -0.36   15.37             -2.19  1.27        22.14        0.53          2.18"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# ==========================================\n",
     "# Watchlist Combiner (Finviz + YFinance)\n",
@@ -789,7 +1221,7 @@
     "import numpy as np\n",
     "\n",
     "# --- 1. INPUT YOUR MANUAL LIST HERE ---\n",
-    "MY_TICKERS = ['GRND','ARCC','BANC','ONB','UBER','ADMA','MIR','APG','SEI','FLEX','DD'] \n",
+    "MY_TICKERS = ['GRND','ARCC','BANC','ONB','UBER','ADMA','MIR','APG','SEI','FLEX','DD','MATR.TO'] \n",
     "\n",
     "def get_combined_watchlist(ticker_list):\n",
     "    print(f\"--- Processing {len(ticker_list)} stocks ---\")\n",
