--- a/Equity_Res_USA_Datafolder.ipynb
+++ b/Equity_Res_USA_Datafolder.ipynb
@@ -788,7 +788,7 @@
     "import numpy as np\n",
     "\n",
     "# --- 1. INPUT YOUR MANUAL LIST HERE ---\n",
-    "MY_TICKERS = ['GRND','ARCC','BANC','ONB','UBER','ADMA','MIR','APG','SEI','FLEX','DD'] \n",
+    "MY_TICKERS = ['GRND','ARCC','BANC','ONB','UBER','ADMA','MIR','APG','SEI','FLEX','DD',] \n",
     "\n",
     "def get_combined_watchlist(ticker_list):\n",
     "    print(f\"--- Processing {len(ticker_list)} stocks ---\")\n",
