added new gemini analyst

--- a/Equity_Res_CA.ipynb
+++ b/Equity_Res_CA.ipynb
@@ -1346,6 +1346,228 @@
     "else:\n",
     "    print(\"No data found.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03a4571f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import pandas as pd\n",
+    "import google as genai\n",
+    "import enum\n",
+    "from typing_extensions import TypedDict\n",
+    "import json\n",
+    "import plotly.express as px\n",
+    "import sys\n",
+    "#!\"{sys.executable}\" -m pip install google.genai\n",
+    "#!\"{sys.executable}\" -m pip install plotly.express"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ba6e20c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tickers_gemini = ['MATR.TO'] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f2eea302",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ API Key loaded securely.\n",
+      "\n",
+      "🧠 Gemini 3 is thinking (High Reasoning Mode)... analyzing $['MATR.TO']...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "## 🧠 Gemini 3 Sentiment Report: ['MATR.TO'] (Mattr Corp.)\n",
+       "\n",
+       "**Reasoning Depth:** High  \n",
+       "**Sentiment Score:** 4.2/10  \n",
+       "**Verdict:** Speculative / Contrarian Hold\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### 1. The Bull Thesis (Why it goes up)\n",
+       "*   **Aggressive Insider Buying:** In late November 2025, following a massive post-earnings sell-off, several directors (Kathleen Hall, Laura Cillis, Jane Skoblo, and Kevin Nugent) initiated \"Informative Buys,\" totaling roughly C$1.3M. This suggests that the board views the ~20% price drop as an overreaction.\n",
+       "*   **AmerCable Synergy:** The completion of the AmerCable acquisition (January 2025) provides a significant manufacturing footprint in the US, positioning Mattr to benefit from long-term infrastructure and electrification trends despite short-term headwinds.\n",
+       "*   **Transformation Complete:** The company has finished its \"Modernization, Expansion, and Optimization\" (MEO) strategy, which should lead to cleaner financials and higher operational efficiency once macro-economic pressures subside.\n",
+       "*   **Deep Valuation Play:** Trading significantly below analyst median targets (C$9.50–$10.56 vs. current price of ~$8.00), representing a 20-30% upside if historical multiples return.\n",
+       "\n",
+       "### 2. The Bear Thesis (Why it goes down)\n",
+       "*   **Guidance \"Tumble\":** Management's Q3 2025 update was a catalyst for a 21.36% single-day share price collapse. The primary drivers were a \"cautious outlook\" for Q4 2025, citing a Canadian industrial slowdown and depressed commodity prices.\n",
+       "*   **Debt & Capital Allocation:** Net debt-to-EBITDA has surged to 3.86x. In response, the CFO has paused share buybacks and M&A activity until at least 2027 to prioritize debt reduction, removing a key near-term price floor.\n",
+       "*   **Negative Revision Momentum:** Analysts are aggressively trimming targets. Stifel Canada slashed its target to $7.00, and overall consensus EPS estimates fell by over 30% in the last 60 days.\n",
+       "*   **Revenue Concentration Risks:** While Connection Technologies is growing (+105% surge), the Composite Technologies segment is struggling with declining demand and margin compression.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### 3. Deep Dive Analysis\n",
+       "\n",
+       "#### **News Analysis**\n",
+       "Headline sentiment is currently **\"Fearful.\"** Recent news is dominated by the November \"plunge\" and \"tumble\" following a revenue surprise that was completely overshadowed by weak forward-looking guidance. The market is currently ignoring the 39% YoY revenue growth, focusing instead on the geopolitical uncertainties and the Canadian macro slowdown cited by CEO Mike Reeves. There are no active scandals or lawsuits, but the \"volatility\" label has been firmly attached to the stock by most financial outlets.\n",
+       "\n",
+       "#### **Smart Money**\n",
+       "*   **Institutional Flow:** Institutional ownership is thin (~3.64%). While some funds like DFA International Small Cap Value have slightly decreased their positions, there hasn't been a mass exodus; rather, a \"wait-and-see\" approach is evident.\n",
+       "*   **Insider Activity:** This is the strongest \"Smart Money\" signal. The cluster of buys from four different directors in November 2025 creates a classic \"Contrarian Buy\" setup. They are betting their own capital that the 2025 bottom is near.\n",
+       "\n",
+       "#### **Financial Statement Analysis**\n",
+       "*   **Historic Performance (2023-2024):** Mattr (formerly Shawcor) successfully divested its legacy pipe-coating business. Revenue stabilized around $900M–$960M, but operating income has been volatile due to high MEO costs ($18M in 2024).\n",
+       "*   **Current Performance (2025):** Q3 2025 was a \"tale of two cities\"—massive revenue growth ($315M) but thin margins and a pivot to a loss-prevention mindset. Net income has fluctuated, turning slightly positive (C$2.86M) in the most recent quarter after a previous negative run.\n",
+       "*   **Expected Performance:** Analysts expect a Q4 adjusted loss of roughly $0.02/share. The balance sheet is the main concern; with $403M spent on AmerCable, interest expense will weigh heavily on the bottom line throughout 2026.\n",
+       "\n",
+       "---\n",
+       "\n",
+       "### 4. Conclusion\n",
+       "The current price of **MATR.TO** is a **Classic Value Trap for Momentum Traders** but a **Potential Entry Point for Patient Value Investors.** \n",
+       "\n",
+       "The \"Whisper\" number on forums suggests traders are terrified of further macro decay in the energy and infrastructure sectors, which is reflected in the technical \"Sell\" ratings across most platforms. However, the contradiction between the **Director-level buying** and the **Analyst target cuts** creates a \"Sentiment Gap.\" \n",
+       "\n",
+       "**Final Verdict:** The stock is likely to trade sideways-to-down in the immediate term (Q1 2026) as the market waits for proof of debt reduction. It is not a \"Buy\" for those seeking a quick recovery, but a \"Speculative Hold\" for those following insider signals and looking toward a 2027 recovery cycle."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from google import genai\n",
+    "from google.genai import types\n",
+    "from IPython.display import display, Markdown\n",
+    "\n",
+    "# ==========================================\n",
+    "# SECURE CONFIGURATION\n",
+    "# ==========================================\n",
+    "\n",
+    "# 1. Define the path to your key file\n",
+    "# If the file is in the same folder as this notebook, just use the filename.\n",
+    "KEY_FILE_PATH = \"C:\\\\Users\\\\James\\\\OneDrive - McMaster University\\\\Gemini API Key\\\\gemini_key.txt\"\n",
+    "\n",
+    "def load_api_key(filepath):\n",
+    "    \"\"\"\n",
+    "    Reads the API key from a local file to avoid hardcoding it.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        with open(filepath, \"r\") as f:\n",
+    "            # .strip() removes any accidental newlines or spaces\n",
+    "            return f.read().strip()\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"❌ Error: Could not find the file '{filepath}'\")\n",
+    "        print(\"Please create a text file with your API key in it.\")\n",
+    "        return None\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Error reading key file: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "# 2. Load the key and set the environment variable\n",
+    "api_key = load_api_key(KEY_FILE_PATH)\n",
+    "\n",
+    "if api_key:\n",
+    "    os.environ[\"GEMINI_API_KEY\"] = api_key\n",
+    "    print(\"✅ API Key loaded securely.\")\n",
+    "else:\n",
+    "    print(\"⚠️ CRITICAL: API Key not loaded. The script will fail.\")\n",
+    "\n",
+    "# ==========================================\n",
+    "# SENTIMENT ANALYSIS FUNCTION\n",
+    "# ==========================================\n",
+    "def analyze_sentiment_gemini_3(tickers_gemini, company_name=None):\n",
+    "    \"\"\"\n",
+    "    Uses Gemini 3 Flash (Preview) with 'High' Thinking Level and Google Search \n",
+    "    using the NEW google-genai SDK.\n",
+    "    \"\"\"\n",
+    "    if not os.environ.get(\"GEMINI_API_KEY\"):\n",
+    "        print(\"❌ Stop: No API Key found.\")\n",
+    "        return\n",
+    "\n",
+    "    print(f\"\\n🧠 Gemini 3 is thinking (High Reasoning Mode)... analyzing ${tickers_gemini}...\")\n",
+    "\n",
+    "    # Initialize Client\n",
+    "    client = genai.Client(api_key=os.environ[\"GEMINI_API_KEY\"])\n",
+    "\n",
+    "    config = types.GenerateContentConfig(\n",
+    "        thinking_config=types.ThinkingConfig(\n",
+    "            include_thoughts=False, \n",
+    "            thinking_level=\"HIGH\"\n",
+    "        ),\n",
+    "        tools=[types.Tool(\n",
+    "            google_search=types.GoogleSearch() \n",
+    "        )],\n",
+    "        response_modalities=[\"TEXT\"]\n",
+    "    )\n",
+    "\n",
+    "    prompt = f\"\"\"\n",
+    "    You are a Senior Equity Research Analyst using the Gemini 3 Reasoning Engine. \n",
+    "    Perform a deep \"Market Sentiment Analysis\" on {tickers_gemini} ({company_name if company_name else 'the company'}).\n",
+    "    \n",
+    "    Step 1: SEARCH. Use Google Search to find the latest (last 30 days) news, analyst notes, and SEC filings.\n",
+    "    Step 2: REASON. Analyze the search results to determine the true market psychology. Look for contradictions between price action and news.\n",
+    "    \n",
+    "    Investigate these 4 Pillars:\n",
+    "    1. **News Virality**: Are headlines fear-mongering or euphoric? (Look for scandals, lawsuits, or product breakthroughs).\n",
+    "    2. **Analyst Shifts**: Are price targets moving UP or DOWN in the last week?\n",
+    "    3. **Institutional Flows**: Any reports of hedge funds or insiders buying/selling?\n",
+    "    4. **The \"Whisper\" Number**: What are traders saying on forums vs. official guidance?\n",
+    "\n",
+    "    **OUTPUT FORMAT:**\n",
+    "    Produce a professional Markdown report:\n",
+    "    \n",
+    "    ## 🧠 Gemini 3 Sentiment Report: {tickers_gemini}\n",
+    "    **Reasoning Depth:** High\n",
+    "    **Sentiment Score:** [1-10]\n",
+    "    **Verdict:** [Buy / Hold / Sell / Speculative]\n",
+    "    \n",
+    "    ### 1. The Bull Thesis (Why it goes up)\n",
+    "    * ...\n",
+    "    \n",
+    "    ### 2. The Bear Thesis (Why it goes down)\n",
+    "    * ...\n",
+    "    \n",
+    "    ### 3. Deep Dive Analysis\n",
+    "    * **News Analysis**: ...\n",
+    "    * **Smart Money**: ...\n",
+    "    * **Financial Statement Analysis**: (Historic performance over last 3 years + expected performance)\n",
+    "    \n",
+    "    ### 4. Conclusion\n",
+    "    [Summary of whether the current price is a trap or an opportunity]\n",
+    "    \"\"\"\n",
+    "\n",
+    "    try:\n",
+    "        response = client.models.generate_content(\n",
+    "            model='gemini-3-flash-preview', # Or 'gemini-3-flash-preview'\n",
+    "            contents=prompt,\n",
+    "            config=config\n",
+    "        )\n",
+    "        display(Markdown(response.text))\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Error: {e}\")\n",
+    "\n",
+    "# ==========================================\n",
+    "# EXECUTION\n",
+    "# ==========================================\n",
+    "# Only run this if the key loaded successfully\n",
+    "if os.environ.get(\"GEMINI_API_KEY\"):\n",
+    "    analyze_sentiment_gemini_3(tickers_gemini, tickers_gemini)"
+   ]
   }
  ],
  "metadata": {
