debugged Altman Z Score filter not being utilized correctly.

--- a/Equities_Research_USA.ipynb
+++ b/Equities_Research_USA.ipynb
@@ -9183,7 +9183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "333020a0",
    "metadata": {},
    "outputs": [
@@ -9255,7 +9255,7 @@
     "\n",
     "# 1. Define the path to your key file\n",
     "# If the file is in the same folder as this notebook, just use the filename.\n",
-    "KEY_FILE_PATH = \"C:\\\\Users\\\\James\\\\OneDrive - McMaster University\\\\Gemini API Key\\\\gemini_key.txt\"\n",
+    "KEY_FILE_PATH = r\"C:\\Users\\jdcc3\\OneDrive - McMaster University\\Gemini API Key\\gemini_key.txt\"\n",
     "\n",
     "def load_api_key(filepath):\n",
     "    \"\"\"\n",
